documentation/versioned_docs/version-1.x/examples/cad-basic.mdx
---
id: cad-basic
title: Loading CAD models
description: Demo shows how to load 3d models from CDF with Cognite3DViewer.
---

`Cognite3DViewer` is a component that eases the migration from [@cognite/3d-viewer](https://www.npmjs.com/package/@cognite/3d-viewer).
It has mostly the same API and could be used when you don't need to control the scene or render loop,
i.e., just want to view some 3d models from CDF.

import { DemoWrapper } from '@site/versioned_docs/version-1.x/components/DemoWrapper';

<DemoWrapper name="Cognite3DViewerDemo" />

```jsx
import { CogniteClient } from '@cognite/sdk';
import { Cognite3DViewer } from '@cognite/reveal';

const client = new CogniteClient({
  appId: 'cognite.reveal.docs.Cognite3DViewer',
});

// to view models from CDF authentication is required
client.loginWithOAuth({ project: 'publicdata' });

// some div in your html page for Cognite3DViewer to insert a canvas
const domElement = document.getElementById('canvas-wrapper');

async function main() {
  const viewer = new Cognite3DViewer({ sdk: client, domElement });

  // load a model and add it on 3d scene
  // https://console.cognitedata.com/publicdata/3d-models/4715379429968321/revisions/5688854005909501
  const model = await viewer.addModel({
    modelId: 4715379429968321,
    revisionId: 5688854005909501,
  });
  viewer.loadCameraFromModel(model);

  // call viewer.dispose() when you don't need the viewer anymore
}
main();
```

Models can be unloaded using `Cognite3DViewer.removeModel()`:

```jsx runnable-1x
viewer.removeModel(model)
```

In some cases, it might be useful to restrict the area for which geometry is loaded to only show a partial
view. This can be done using a `geometryFilter`:

```js
  const model = await viewer.addModel({
    modelId: 4715379429968321,
    revisionId: 5688854005909501,
    geometryFilter: {
      // Only load geometry inside a box around origin with 20x20 horizontal extent and 5 vertical extent.
      boundingBox: new THREE.Box3(new THREE.Vector3(-10, -10, 0), new THREE.Vector3(10, 10, 5))
    }
  });
  viewer.loadCameraFromModel(model);
```

By default, the bounds provided must be in "CDF coordinates". This is e.g. suitable if you are retrieving coordinates
directly from the [Nodes API](https://docs.cognite.com/api/v1/#operation/get3DNodes) to for instance show the area
around a given node. If the coordinates are in "Reveal coordinates" (i.e. in
[the WebGL coordinate system](https://www.tutorialspoint.com/webgl/webgl_basics.htm)) the `geometryFilter` can be
set up using `isBoundingBoxInModelCoordinates`:

```js
  const model = await viewer.addModel({
    modelId: 4715379429968321,
    revisionId: 5688854005909501,
    geometryFilter: {
      // Only load geometry inside a box around origin with 20x20 horizontal extent and 5 vertical extent.
      boundingBox: new THREE.Box3(new THREE.Vector3(-10, 0, -10), new THREE.Vector3(10, 5, 10)),
      // Instruct Reveal that the coordinates already are relative to the coordinates of the model
      isBoundingBoxInModelCoordinates: true
    }
  });
  viewer.loadCameraFromModel(model);
```
